--- a/src/app/aaacesa/prealertas/prealertas.component.html
+++ b/src/app/aaacesa/prealertas/prealertas.component.html
@@ -203,121 +203,93 @@
             <div class="col-12 col-lg-7 col-xl-8">                    
               <div class="card">
                 <div class="card-body">
-                  <div class="row mb-1">
-
-                    <!-- Start Left Inside -->
-                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-4">  
-                      <div class="row">
-                        <!-- <div class="col-12 mb-4">
-                          <h6 class="modal-title">Detalle PreAlerta {{ detailData.IdPrealerta }}</h6>
-                        </div> -->
-
-                        <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-12">
-                          <h5 class="detail-text text-muted">Guía Master </h5>
-                          <p class="detail-text">{{detailData.GuiaMaster}}</p>
-                        </div>
-
-                        <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-12">
-                          <h5 class="detail-text text-muted">Guía House </h5>
-                          <p class="detail-text">{{detailData.GuiaHouse}}</p>
-                        </div>
-
-                        <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-12">
-                          <h5 class="detail-text text-muted">Consignatario a Facturar</h5> 
-                          <p class="detail-text">{{detailData.Consignatario}}</p>
-                        </div>
-
-                        <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-12">
-                          <h5 class="detail-text text-muted">Método de Pago</h5>
-                          <p class="detail-text">{{detailData.MetodoPago}}</p>
-                        </div>
-
-                        <div class="col-12">
-                          <h5 class="detail-text text-muted">Condición de Alamacenaje</h5>
-                          <p class="detail-text">{{detailData.CondicionAlmacenaje}}</p>
-                        </div>     
-                      </div>                                                 
-                    </div>  
-                    <!-- End Left Inside -->
-
-                    <!-- Start Right Inside -->
-                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-8">
-                      <div class="row justify-content-end">
-                        <div class="col-6 col-sm-8 col-md-8 col-lg-8 col-xl-8">
-                          <div class="referencia">
-                            <h5 class="detail-text">Referencia: {{detailData.Referencia}}</h5>
-                          </div>
-                        </div>
-                        <div class="col-6 col-sm-4 col-md-4 col-lg-4 col-xl-4">
-                          <h5 class="detail-text text-muted">Estatus</h5>
-                          <div class="col status-filter">
-                            <div class="status-filter__circle status-filter__circle--{{detailData.Estatus | statusPipe }}">
-                            </div>
-                            <div class="status-filter__text">
-                              <p> {{detailData.Estatus}} </p>
-                            </div>
-                          </div>
-                        </div>
+                  <div class="row mt-2">
+                    <div class="col-6 col-sm-6 col-md-4 col-lg-2 col-xl-2">
+                      <div class="detail-text font-weight-bold ">Guía Master </div>
+                      <p class="detail-text">{{detailData.GuiaMaster}}</p>
+                    </div>
+                    <div class="col-6 col-sm-6 col-md-4 col-lg-2 col-xl-2">
+                      <div class="detail-text font-weight-bold">Guía House </div>
+                      <p class="detail-text">{{detailData.GuiaHouse}}</p>
+                    </div>
+                    <div class="col-6 col-sm-6 col-md-4 col-lg-2 col-xl-2">
+                        <div class="detail-text font-weight-bold">Referencia</div>
+                        <p class="detail-text">{{detailData.Referencia }}</p>
+                    </div>
+                    <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+                      <div class="detail-text font-weight-bold">Fecha de Arribo</div>
+                      <p class="detail-text">{{detailData.FechaArribo}}</p>
+                    </div>
+                    <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+                      <div class="detail-text font-weight-bold">Estatus</div>
+                      <div class="status-filter__circle status-filter__circle--{{detailData.Estatus | statusPipe }}"></div>
+                      <div class="status-filter__text">
+                        <p> {{detailData.Estatus}} </p>
                       </div>
-
-                      <div class="row">
-                        <div class="col-3 col-sm-2 col-md-2 col-lg-2 col-xl-2">
-                          <h5 class="detail-text text-muted">Piezas </h5>
-                          <p class="detail-text">{{detailData.Piezas}}</p>
-                        </div>
-
-                        <div class="col-3 col-sm-2 col-md-2 col-lg-2 col-xl-2">
-                          <h5 class="detail-text text-muted">Peso</h5>
-                          <p class="detail-text">{{detailData.Peso}} Kg</p>
-                        </div>
-
-                        <div class="col-6 col-sm-8 col-md-8 col-lg-8 col-xl-8">
-                          <h5 class="detail-text text-muted">Uso de CFDI</h5>
-                          <p class="detail-text">{{detailData.UsoCFDI}}</p>
-                        </div>                              
+                    </div>
+                  </div><!-- End Row Inside -->
+                  <hr class="dividerb">
+                  <div class="row mt-2">
+                    <div class="col-6 col-sm-6 col-md-4 col-lg-1 col-xl-1">
+                      <div class="detail-text font-weight-bold">Piezas </div>
+                      <p class="detail-text">{{detailData.Piezas}}</p>
+                    </div>
+          
+                    <div class="col-6 col-sm-6 col-md-4 col-lg-1 col-xl-1">
+                      <div class="detail-text font-weight-bold">Peso</div>
+                      <p class="detail-text">{{detailData.Peso}} kg</p>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                        <div class="detail-text font-weight-bold">Almacén de Origen</div>
+                        <p class="detail-text">">{{detailData.AlmacenOrigen}} </p>
                       </div>
-
-                      <div class="row">
-                        <div class="col-6 col-sm-4 col-md-4 col-lg-4 col-xl-4">
-                          <h5 class="detail-text text-muted">Fecha de Arribo</h5>
-                          <p class="detail-text">{{detailData.FechaArribo}}</p>
-                        </div>
-                        <div class="col-6 col-sm-3 col-md-3 col-lg-4 col-xl-3">
-                          <h5 class="detail-text text-muted">Consolidado</h5>
-                          <p class="detail-text">{{detailData.Consolidado ? 'Sí' : 'No' }}</p>
-                        </div>
-                        <div class="col-12 col-sm-5 col-md-5 col-lg-4 col-xl-5">
-                          <h5 class="detail-text text-muted">Almacén de Origen</h5>
-                          <p class="detail-text">{{detailData.AlmacenOrigen}}</p>
-                        </div>
-                      </div>
-
-                      <div class="row">
-                        <div class="col-xs-12 col-sm-12 col-lg-6">
-                          <h5 class="detail-text text-muted">Rango de Temperatura</h5>
-                          <p class="detail-text">{{detailData.RangoTemperatura}}</p>
-                        </div>   
-                        
-                        <div class="col-xs-12 col-sm-12 col-lg-6">
-                          <h5 class="detail-text text-muted">Instrucciones de Manejo</h5>
-                          <p class="detail-text">{{detailData.InstruccionesManejo}}</p>
-                        </div>   
+            
+                      <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                          <div class="detail-text font-weight-bold">Condición de Almacenaje</div>
+                          <p class="detail-text">">{{detailData.CondicionAlmacenaje}}</p>
                       </div>
                       
-                    </div>
-                    <!-- End Right Inside -->
+                      <div class="col-xs-3 col-sm-3 col-md-2 col-lg-2">
+                          <div class="detail-text font-weight-bold">Rango de Temperatura</div>
+                          <p class="detail-text">">{{detailData.RangoTemperatura}}</p>
+                      </div>
+                      <div class="col-xs-3 col-sm-3 col-md-2 col-lg-2">
+                          <div class="detail-text font-weight-bold">Consolidado</div>
+                          <p class="detail-text">">{{detailData.Consolidado ? 'Sí' : 'No' }}</p>
+                      </div>
                     
-                  </div>                                                                                                                                                                 
+                  </div><!-- End Row Inside -->
 
                   <hr class="dividerb">
-
-                  <div class="row mb-3">                
-                    <div *ngFor="let file of detailData.Documentos" class="col col-lg-3">                        
-                      <!-- <h1 (click)="openDocument(file.IdDocumento)" style="font-size: 5rem; text-align: center"><i class="fas {{file.NombreDocumento | fileIconPipe}}"></i></h1> -->
-                      <img (click)="openDocument(file.IdDocumento)" class="file__icon" src="../../../assets/img/iconos/{{file.Estatus | fileIconStatusPipe}}" />                            
-                      <p style="word-break: break-all; text-align: center" class="detail-text">{{file.NombreDocumento}}</p>                      
-                    </div>                      
+          
+                  <div class="row mt-3">
+                    
+                    <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                        <div class="detail-text font-weight-bold">Uso de CFDI</div>
+                        <p class="detail-text">">{{detailData.UsoCFDI}}</p>
+                    </div>
+                    
+                    <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                        <div class="detail-text font-weight-bold">Consignatario a Facturar</div> 
+                        <p class="detail-text">{{detailData.Consignatario}}</p>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                        <div class="detail-text font-weight-bold">Método de Pago</div>
+                        <p class="detail-text">{{detailData.MetodoPago}}</p>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                        <div class="detail-text font-weight-bold">Instrucciones de Manejo</div>
+                        <p class="detail-text">{{detailData.InstruccionesManejo}}</p>
+                    </div>
                   </div>
+                  <!-- End Row Inside -->
+                  <hr class="dividerb">
+                  <div class="row mt-3">
+                    <div *ngFor="let file of detailData.Documentos" class="col-xs-2 col-sm-3 col-md-2 col-lg-2">
+                        <img (click)="openDocument(file.IdDocumento)" class="file__icon" src="../../../assets/img/iconos/{{file.Estatus | fileIconStatusPipe}}" />
+                      <p style="word-break: break-all; text-align: center" class="detail-text">{{file.NombreDocumento}}</p>                                                                                               
+                    </div>                        
+                  </div> <!-- End Row Inside  -->
                 </div> <!-- End Card-Body-->
               </div> <!-- End Card-->
             </div>
