--- a/src/app/aaacesa/dialogs/dialog-create-previos.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-previos.component.html
@@ -39,7 +39,10 @@
                     <input matInput type="text" (input)="cleanReferencia()" maxlength="20" formControlName="houseCtrl" placeholder="Guía House"/>  
                     <mat-error *ngIf="firstFormGroup.get('houseCtrl').errors?.required">
                       Este campo es obligatorio
-                    </mat-error>   
+                    </mat-error>
+                    <mat-error *ngIf="firstFormGroup.get('houseCtrl').errors?.pattern">
+                      Carácteres no permitidos
+                    </mat-error>     
                   </mat-form-field> 
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6">                                                
