--- a/src/app/aaacesa/dialogs/dialog-create-exportaciones.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-exportaciones.component.html
@@ -228,7 +228,7 @@
                         <div class="row">
                             <div class="col-xs-12 col-sm-12 col-lg-8">
                                 <div class="detail-text text-muted">Fecha Entrada Mercancía</div>
-                                <p class="detail-text">{{model.FechaEntradaMercancia?.slice(0,4)}}/{{model.FechaEntradaMercancia?.slice(4,6)}}/{{model.FechaEntradaMercancia?.slice(6,9)}} {{model.FechaEntradaMercancia?.slice(9,14)}}</p>
+                                <p class="detail-text">{{model.FechaEntradaMercancia?.slice(6,9)}}/{{model.FechaEntradaMercancia?.slice(4,6)}}/{{model.FechaEntradaMercancia?.slice(0,4)}} {{model.FechaEntradaMercancia?.slice(9,14)}}</p>
                             </div>
                         </div>
                     
@@ -264,12 +264,9 @@
 
   <div *ngIf="successResponse" class="container mt-3">
     <div class="conatiner">
-      <div class="row">
+      <div class="row">        
         <div class="col-12 text-center">
-          Gracias
-        </div>
-        <div class="col-12 text-center">
-          {{responseMessage}}
+          <h3>{{responseMessage}}</h3>
         </div>
         <div class="col-12 text-center mt-5 ">
           <button (click)="closeDialog('true')" class="btn btn-pill btn-primary btn-sm">Aceptar</button>  
