--- a/src/app/aaacesa/prealertas/prealertas.component.html
+++ b/src/app/aaacesa/prealertas/prealertas.component.html
@@ -189,7 +189,7 @@
     <div class="modal-content">
 
       <div class="modal-header">
-        <h6 class="modal-title">Detalle PreAlerta {{ detailData.IdPrealerta }}</h6>
+        <h4 class="modal-title font-weight-bold">Detalle PreAlerta {{ detailData.IdPrealerta }}</h4>
         <button type="button" class="close" (click)="detalleModal.hide()" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -241,21 +241,21 @@
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
                         <div class="detail-text font-weight-bold">Almacén de Origen</div>
-                        <p class="detail-text">">{{detailData.AlmacenOrigen}} </p>
+                        <p class="detail-text">{{detailData.AlmacenOrigen}} </p>
                       </div>
             
                       <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
                           <div class="detail-text font-weight-bold">Condición de Almacenaje</div>
-                          <p class="detail-text">">{{detailData.CondicionAlmacenaje}}</p>
+                          <p class="detail-text">{{detailData.CondicionAlmacenaje}}</p>
                       </div>
                       
                       <div class="col-xs-3 col-sm-3 col-md-2 col-lg-2">
                           <div class="detail-text font-weight-bold">Rango de Temperatura</div>
-                          <p class="detail-text">">{{detailData.RangoTemperatura}}</p>
+                          <p class="detail-text">{{detailData.RangoTemperatura}}</p>
                       </div>
                       <div class="col-xs-3 col-sm-3 col-md-2 col-lg-2">
                           <div class="detail-text font-weight-bold">Consolidado</div>
-                          <p class="detail-text">">{{detailData.Consolidado ? 'Sí' : 'No' }}</p>
+                          <p class="detail-text">{{detailData.Consolidado ? 'Sí' : 'No' }}</p>
                       </div>
                     
                   </div><!-- End Row Inside -->
@@ -266,7 +266,7 @@
                     
                     <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
                         <div class="detail-text font-weight-bold">Uso de CFDI</div>
-                        <p class="detail-text">">{{detailData.UsoCFDI}}</p>
+                        <p class="detail-text">{{detailData.UsoCFDI}}</p>
                     </div>
                     
                     <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
