--- a/src/app/aaacesa/prealertas/prealertas.component.html
+++ b/src/app/aaacesa/prealertas/prealertas.component.html
@@ -189,7 +189,7 @@
     <div class="modal-content">
 
       <div class="modal-header">
-        <h5 class="modal-title font-weight-bold">Detalle PreAlerta {{ detailData.IdPrealerta }}</h5>
+        <h5 class="modal-title font-weight-bold">Detalle Prealerta {{ detailData.IdPrealerta }}</h5>
         <button type="button" class="close" (click)="detalleModal.hide()" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -204,19 +204,19 @@
               <div class="card">
                 <div class="card-body">
                   <div class="row mt-2">
-                    <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+                    <div class="col-6 col-sm-6 col-md-6 col-lg-3 col-xl-3">
                       <div class="detail-text font-weight-bold ">Guía Master </div>
                       <p class="detail-text">{{detailData.GuiaMaster}}</p>
                     </div>
-                    <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+                    <div class="col-6 col-sm-6 col-md-6 col-lg-3 col-xl-3">
                       <div class="detail-text font-weight-bold">Guía House </div>
                       <p class="detail-text">{{detailData.GuiaHouse}}</p>
                     </div>
-                    <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+                    <div class="col-6 col-sm-6 col-md-6 col-lg-3 col-xl-3">
                         <div class="detail-text font-weight-bold">Referencia</div>
                         <p class="detail-text">{{detailData.Referencia }}</p>
                     </div>
-                    <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+                    <div class="col-6 col-sm-6 col-md-6 col-lg-3 col-xl-3">
                       <div class="detail-text font-weight-bold">Estatus</div>
                       <div class="status-filter__circle status-filter__circle--{{detailData.Estatus | statusPipe }}"></div>
                       <div class="status-filter__text">
@@ -233,7 +233,7 @@
                       <div class="detail-text font-weight-bold">Peso</div>
                       <p class="detail-text">{{detailData.Peso}} kg</p>
                     </div>
-                    <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+                    <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3">
                       <div class="detail-text font-weight-bold">Fecha de Arribo</div>
                       <p class="detail-text">{{detailData.FechaArribo}}</p>
                     </div>
@@ -243,21 +243,21 @@
                   <hr class="dividerb">
                   <div class="row mt-2">
                     
-                    <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
                         <div class="detail-text font-weight-bold">Almacén de Origen</div>
                         <p class="detail-text">{{detailData.AlmacenOrigen}} </p>
                       </div>
             
-                      <div class="col-xs-3 col-sm-3 col-md-3 col-lg-4">
+                      <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
                           <div class="detail-text font-weight-bold">Condición de Almacenaje</div>
                           <p class="detail-text">{{detailData.CondicionAlmacenaje}}</p>
                       </div>
                       
-                      <div class="col-xs-3 col-sm-3 col-md-2 col-lg-3">
+                      <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
                           <div class="detail-text font-weight-bold">Rango de Temperatura</div>
                           <p class="detail-text">{{detailData.RangoTemperatura}}</p>
                       </div>
-                      <div class="col-xs-3 col-sm-3 col-md-2 col-lg-2">
+                      <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
                           <div class="detail-text font-weight-bold">Consolidado</div>
                           <p class="detail-text">{{detailData.Consolidado ? 'Sí' : 'No' }}</p>
                       </div>
@@ -268,20 +268,20 @@
           
                   <div class="row mt-3">
                     
-                    <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
                         <div class="detail-text font-weight-bold">Uso de CFDI</div>
                         <p class="detail-text">{{detailData.UsoCFDI}}</p>
                     </div>
                     
-                    <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
                         <div class="detail-text font-weight-bold">Consignatario a Facturar</div> 
                         <p class="detail-text">{{detailData.Consignatario}}</p>
                     </div>
-                    <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
                         <div class="detail-text font-weight-bold">Método de Pago</div>
                         <p class="detail-text">{{detailData.MetodoPago}}</p>
                     </div>
-                    <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
                         <div class="detail-text font-weight-bold">Instrucciones de Manejo</div>
                         <p class="detail-text">{{detailData.InstruccionesManejo}}</p>
                     </div>
@@ -311,7 +311,7 @@
                     </div> -->
 
                     <div class="col-12">
-                      <h6>Estatus Transferencia</h6>                        
+                      <h6 class="font-weight-bold" >Estatus Transferencia</h6>                        
                     </div>                                    
                     <div class="col-12">
                       <h5 class="detail-text">Fecha de Solicitud</h5>
@@ -319,7 +319,7 @@
                     </div>    
 
                     <div class="col-12">
-                      <h6>Transferencia</h6>                        
+                      <h6 class="font-weight-bold">Transferencia</h6>                        
                     </div>   
                     <div *ngFor="let estado of estatusTransferencia" class="col-12">   
                       <div class="row justify-content-start">
@@ -341,7 +341,7 @@
                     </div>                           
 
                     <div class="col-12">
-                      <h6>Pre Alerta</h6>                        
+                      <h6 class="font-weight-bold">Seguimiento</h6>                        
                     </div>                                                                 
 
                     <div *ngIf="detailData.EstatusDisponibles?.length" class="col-sm-12 col-md-12 col-lg-12 mb-1">
