--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -411,7 +411,8 @@ td.mat-cell{
 .floating {
     &__btn {
         position: fixed;
-        right: 1.1rem;
+        // right: 1.1rem;
+        right: 0;
         top: 47%;
         color: white;
         padding: .5rem 1rem;
