--- a/src/app/aaacesa/dialogs/dialog-create-prealertas.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-prealertas.component.html
@@ -248,7 +248,8 @@
       <!-- <ng-template matStepLabel>Subir documentos</ng-template> -->
 
       <div class="container mt-3">
-        <p>Subir documentos: Guia Master, Guia House, Gafete, Etiquetado</p>  
+        <!-- <p>Subir documentos: Guia Master, Guia House, Gafete, Etiquetado</p>   -->
+        <p>Subir documentos: {{ DOCUMENTS_REQUIRED[secondFormGroup.get('instruccionesManejoCtrl').value] }}</p> 
         
         <div class="row mb-3">                     
           <div class="col-lg-12 mb-4">
