StatusFilter (Previos,Salidas,Exportacion) PrealertasCrear Btn size

--- a/src/app/aaacesa/exportaciones/exportaciones.component.html
+++ b/src/app/aaacesa/exportaciones/exportaciones.component.html
@@ -83,10 +83,13 @@
             <div class="row align-items-center">
 
               <div *ngFor="let estado of statusEnum; let i=index" [ngClass]="{'status-filter--active': currentFilterIndex==i}" class="col mb-1 text-center status-filter u-cursor">            
-                <div class="status-filter__circle status-filter__circle--{{estado | statusPipe}}"></div>
+                <div>
+                  <div class="status-filter__circle status-filter__circle--mr-sm status-filter__circle--{{estado | statusPipe}}"></div>
+                  <span class="status-filter__number">({{ countStatus[i] }})</span>
+                </div>
                 <div class="status-filter__text">
                   <label (click)="applyFilter(i)" class="u-cursor">
-                    <span class="status-filter__number">({{ countStatus[i] }})</span> {{statusLabels[i]}}
+                    {{statusLabels[i]}}                    
                   </label>
                 </div>
               </div>             
